--- a/package.json
+++ b/package.json
@@ -2,24 +2,30 @@
   "name": "portfolio_rjs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rynraven.github.io/dev-Ryn/"
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
+    "gh-pages": "^3.2.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-scripts": "4.0.3",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
