--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio_rjs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rynraven.github.io/dev-Ryn/"
+  "homepage": "https://rynraven.github.io/dev-Ryn/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
